--- a/dungeon.css
+++ b/dungeon.css
@@ -987,7 +987,7 @@ li.new-save-game {
 }
 
 
-#inventory-tabs {
+#inventory-tabs, #shop-inventory-tabs {
     padding: 0;
     margin: 0;
     -moz-border-radius: inherit;
@@ -1000,20 +1000,26 @@ li.new-save-game {
     gap: .325rem; /* ~5px */
 }
 
-    #inventory-tabs button {
+    #inventory-tabs button, #shop-inventory-tabs button {
         padding: 0.125rem 0.625rem; /* ~2px 10px */
         cursor: pointer;
         margin: 0;
         background: #2c672c;
         color: #000;
-        border-bottom:none;
+        border-bottom: none;
         -moz-border-radius: 0px;
         -webkit-border-radius: .325rem .325rem 0px 0px;
         border-radius: .325rem .325rem 0px 0px;
     }
-        #inventory-tabs button.tab {flex: 12;}
-        #inventory-tabs button.sort {flex: 2;}
-        #inventory-tabs button.active {background: #0f0;}
+        #inventory-tabs button.tab, #shop-inventory-tabs button.tab {
+            flex: 12;
+        }
+        #inventory-tabs button.sort, #shop-inventory-tabs button.sort {
+            flex: 2;
+        }
+        #inventory-tabs button.active, #shop-inventory-tabs button.active {
+            background: #0f0;
+        }
 
 #tabs #inventory-item-wrapper {
     display: flex;
@@ -1380,16 +1386,17 @@ padding: 0.625rem; /* ~10px */
 #shop-left {
     display: flex;
     flex-direction: column;
-    height: 30rem;
-    width: 29%;
+    height: 31.25rem;
+    width: 30%;
     margin-top: 0.625rem;
 }
-
+/* depricated kept temporarily for reference
 #sell-dropzone {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30%;
+    height: 90%;
     width: 100%;
     padding: 0.625rem;
     background: rgba(20, 30, 20, 0.7);
@@ -1400,15 +1407,21 @@ padding: 0.625rem; /* ~10px */
     font-size: 0.875rem;
     text-align: center;
 }
+*/
+  
 
-    #sell-dropzone.drag-over {
-        border-color: #0f0;
-        border-width: 2px;
+    #shop-info{
+        padding-bottom: 0.625rem;
+    }
+    #shop-info p{
+        font-size: .625rem;
+        width:100%;
+        text-align:center;
     }
 
 #shop-items {
     width: 100%;
-    height: 70%;
+    height: 100%;
     padding: 0.625rem;
     border: 0.125rem solid #0f0;
     border-radius: .625rem;
@@ -1418,6 +1431,10 @@ padding: 0.625rem; /* ~10px */
     scrollbar-gutter: stable;
     background: rgba(20, 30, 20, 0.7);
 }
+    #shop-items.drag-over {
+        border-color: #0f0;
+        border-width: 2px;
+    }
 
 #shop-inventory-wrapper {
     display: flex;
