stabe but still buggy jpourney system post overhaul

--- a/dungeon.css
+++ b/dungeon.css
@@ -1608,3 +1608,8 @@ tooltip-description {
 .shop-item img.item-icon.junk {
     background-color: whitesmoke !important;
 }
+
+
+/* added in bugfix */
+
+
