--- a/dungeon.css
+++ b/dungeon.css
@@ -14,6 +14,7 @@ body {
     overflow: hidden;
     font-family: 'Verdana', Roboto, sans-serif;
     user-select: none;
+    cursor: pointer;
 }
 
 div {
@@ -49,6 +50,28 @@ hr {
 }
 /* CUSTOM BASELINE - END */
 
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: 100%;
+    height: 100%;
+    margin:0;
+    padding:0;
+}
+
+#splash, #game, #hud-layer, #ui-layer {
+    border-radius: .3125rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    width: calc(100vw - .185rem);
+    height: calc(100vh - .185rem);
+}
+
 /* SPLASH - START */
 #splash {
     display: flex;
@@ -59,13 +82,6 @@ hr {
     color: #0f0;
     font-family: 'Verdana', Roboto, sans-serif;
     z-index: 1000;
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
     pointer-events: auto;
 }
 
@@ -174,19 +190,11 @@ hr {
     display: flex;
     flex-direction: row;
     background-color: #000;
-    margin: 0;
     position: relative;
-    width: calc(100vw - .15rem);
-    height: calc(100vh - .15rem);
     z-index: 1;
 }
 
 #ui-layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: calc(100vw - 0.15rem); /* Account for border (1px each side) */
-    height: calc(100vh - 0.15rem); /* Account for border (1px each side) */
     background: transparent;
     pointer-events: none; /* Non-clickable, children can override */
     z-index: 1100; /* Above game and splash */
@@ -194,19 +202,20 @@ hr {
 }
 
 #hud-layer {
-    position: absolute;
     opacity: 0.75;
-    top: 0;
-    left: 0;
-    width: calc(100vw - 0.15rem); /* Account for border (1px each side) */
-    height: calc(100vh - 0.15rem); /* Account for border (1px each side) */
     background: transparent;
     pointer-events: none; /* Non-clickable, children can override */
     z-index: 100; /* Above game but below splash */
     overflow: hidden; /* Prevent child overflow */
 }
 
-
+    #hud-layer > * {
+        font-weight: bold;
+        text-align: center;
+        color: #0f0;
+        z-index: 510;
+        padding: 0.5rem;
+    }
 
 .status-divider {
     position: absolute;
@@ -219,25 +228,27 @@ hr {
 
 
 #hud-top-left {
+    position: absolute;
+    top: .5rem;
+    left: .5rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin: 0;
-    padding:0;
+    padding: 0;
+    z-index: 599;
+    gap: .625rem; /* ~5px */
+    width: 254px;
 }
 
 
 
 #player-info {
-    position: absolute;
     display: flex;
     flex-direction: row;
     /* width: calc(100vw - 0.15rem);*/ /* Account for border (1px each side) */
 
-    top: 1.5rem;
-    left: 1.5rem;
-    width: 248px;
+    width:100%;
     padding: .3125rem;
-    z-index: 599;
     pointer-events: none;
     margin: 0;
     border: 2px solid #0f0;
@@ -289,10 +300,25 @@ hr {
     /* width: calc(100vw - 0.15rem);*/ /* Account for border (1px each side) */
 }
 
-#minimap-canvas {
+#hp-mana {
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    gap: .625rem; /* ~10px */
+}
+
+#hud-top-right {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: .5rem;
+    right: .5rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    z-index: 599;
+    gap: .625rem; /* ~5px */
+}
+#minimap-canvas {
     width: 248px;
     height: 138px;
     padding: 2px 0 0 2px;
@@ -303,9 +329,6 @@ hr {
     background: rgba(134, 134, 134, 1);
 }
 #minimap-wrapper {
-    position: absolute;
-    top: 1.5rem;
-    right: 1.5rem;
     width: 254px;
     height: 162px;
     padding: 0px;
@@ -337,36 +360,8 @@ hr {
         display: none;
     }
 
-#player-status {
-    position: absolute;
-    display: flex;
-    justify-content: space-evenly;
-    top: 0;
-    left: 0;
-    width: calc(100vw - 0.125rem); /* Account for border (1px each side) */
-    padding: 0;
-    margin: 0;
-    height: calc(100vh - 0.125rem); /* ~48px */
-    pointer-events: none; /* Non-clickable, children can override */
-    z-index: 500; /* Above game but below splash */
-    overflow: hidden; /* Prevent child overflow */
-}
 
-#hp-mana {
-    position: absolute;
-    top: 5.625rem;
-    left: 1.25rem;
-    display: flex;
-    flex-direction: column;
-    gap: .625rem; /* ~10px */
-}
-    #player-status > * {
-        font-weight: bold;
-        text-align: center;
-        color: #0f0;
-        z-index: 510;
-        padding: 0.5rem;
-    }
+
 /* Container for the progress bar */
 .progress-bar {
     position: relative;
@@ -633,7 +628,8 @@ hr {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 70vw;
-    height: 75vh;
+    min-height: auto; /* Allow height to adjust based on content */
+    max-height: 95vh;
     background: rgba(20, 30, 20, 0.7);
     border: 0.125rem solid #060; /* ~1px */
     border-radius: .625rem;
@@ -641,7 +637,7 @@ hr {
     display: none; /* Hidden by default */
     font-family: 'Verdana', Roboto, sans-serif;
     font-size: 0.875rem; /* ~14px */
-    padding: .75rem; /* ~16px */
+    padding: .875rem; 
     pointer-events: auto; /* Clickable children */
     z-index: 2000; /* Increased to appear above #splash */
 }
@@ -800,8 +796,10 @@ hr {
 
 #tab-wrapper {
     height: 100%;
+    min-height: 40rem;
+    max-height: 95vh; /* Prevents overflow */
     width: 100%; /* Ensure it takes the full width of #tabs */
-    padding: 0 0.3125rem 0 0.3125rem;
+    padding: 0;
     padding-top: 0;
     margin: 0;
     overflow-y: hidden;
@@ -840,15 +838,17 @@ hr {
     height: 30rem; /* ~400px */
     width: 100%;
     display: flex; /* overwritten in line with none when hide is triggered*/
-    justify-content: space-between;
+    flex-direction: row;
+    gap: 0.875rem; /* ~10px */
 }
 
 #character {
+    flex: 44; /* Takes 4/5 of the width */   
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     height: 30rem; /* ~400px */
-    width: 29%;
     margin-top: 0.625rem; /* ~10px */
+    gap: 0.875rem; /* ~10px */
 }
 
 #tabs h2 {
@@ -886,26 +886,26 @@ hr {
 
 #character-stat-wrapper {
     display: flex;
-    flex-wrap: wrap; /* Allows items to wrap into multiple columns */
+    flex-direction: column;
     width: 100%;
-    gap: 0; /* Optional: controls spacing between items */
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    gap: .125rem; /* Optional: controls spacing between items */
     font-size: 0.75rem; /* ~12px */
-    padding: 0.625rem; /* ~10px */
+    padding: 0.3125rem;
     background: rgba(20, 30, 20, 0.7);
     border: 0.125rem solid #0f0; /* ~1px */
     border-radius: .625rem;
+    justify-content: center; /* Centers child divs horizontally */
+    align-items: center; /* Centers child divs vertically */
+    overflow-y: auto; /* Allows scrolling if content exceeds height */
+    scroll-behavior: smooth; /* Smooth scrolling for overflow */
 }
 
     #character-stat-wrapper > div {
         padding: .125rem 0 .125rem 0; /* ~2px */
-        width: 50%; /* 50% width minus border width (3px * 2) */
         box-sizing: border-box; /* Ensures padding/border don't increase width */
         margin: 0;
-        justify-content: center;
-        align-content: center;
+        text-align: left;
+        width: 100%; /* Full width of the parent */
     }
 
         #character-stat-wrapper > div > span {
@@ -1084,7 +1084,6 @@ hr {
     background: rgba(20, 30, 20, 0.7);
     border: 0.125rem solid #0f0; /* ~1px */
     border-radius: .625rem;
-    margin-bottom: 0.625rem; /* ~10px */
     height: 100%; /* Ensure it stretches to fill #game-menu */
     box-sizing: border-box;
 }
@@ -1290,10 +1289,10 @@ li.new-save-game {
 }
 
 #inventory {
+    flex:56;
     display: flex;
     flex-direction: column;
     height: 31.75rem; /* ~400px */
-    width: 68%;
     margin-top: 0.625rem; /* ~10px */
 }
 
@@ -1351,8 +1350,7 @@ li.new-save-game {
     -ms-align-content: flex-start;
     -webkit-align-content: flex-start;
     align-content: flex-start;
-    gap: 0.625rem; /* ~5px */
-    width: 100%;
+    gap: 0.625rem;
     height: 27.25rem; /* Keep max height but let content dictate rows */
     padding: 0.625rem; /* Outer padding */
     border: 0.125rem solid #0f0;
@@ -1406,6 +1404,7 @@ li.new-save-game {
     color: #0f0;
     z-index: 3000;
     max-width: 15rem; /* ~200px */
+    max-height:45rem; 
     background: rgba(20, 30, 20, 1);
     border: 0.125rem solid #060; /* ~1px */
     border-radius: .625rem;
